Overflow Hidden Issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -127,7 +127,7 @@ h1.home {
 
 #mainColumn
 {
-	width: 80%;
+	width: 80%; min-height: 100%;
 	overflow: hidden;
 	::-webkit-scrollbar { 
     display: none; 
